refactor: updated tasks to work with a single user
